# video-analizier

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
backend/app/: __init__.py  auth.py  cache.py  chunking.py  cli.py  config.py  db.py  email_service.py  errors.py  jobs.py  limits.py  llm_settings_store.py  main.py  media.py  models.py  pipeline.py  ratelimit.py  request_security.py  schemas.py  security.py  share.py  ssrf.py  turnstile.py  worker.py
backend/tests/: conftest.py  test_api.py  test_article_ingest.py  test_asks.py  test_asr_postprocess.py  test_auth.py  test_auth_and_library.py  test_cache.py  test_cache_api.py  test_caption_normalize.py  test_captions.py  test_chunking.py  test_cli_users.py  test_docx_ingest.py  test_epub_ingest.py  test_errors.py  test_limits.py  test_list_sources_perf.py  test_llm_providers.py  test_multi_source_api.py  test_ovh_deployment_config.py  test_pipeline_failures.py  (+17 more)
deploy/: nginx-video-analizier.conf
examples/: README.md  asr_clip_test.json  pilot_result.json  pilot_transcript.txt  youtube_asr_no_manual_subs.json  youtube_asr_no_manual_subs_transcript.txt  youtube_live_test.json
frontend/: index.html  manifest.webmanifest  robots.txt  share.html  sw.js
scripts/: backup_postgres.sh  generate_pilot_audio.py  restore_postgres.sh  smoke_docker.sh  smoke_local.sh  vps_setup.sh
(+23 files in other folders)
